fix text align center

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -42,6 +42,7 @@
   font-size: 1rem;
   line-height: 1.6;
   color: #333;
+  text-align: center;
 }
 
 /* Responsive: Oculta carrusel en móvil */
